--- a/style.css
+++ b/style.css
@@ -98,24 +98,34 @@ form {
     background: white;
 
     border-radius: 0px 0px 20px 20px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
 }
 
 fieldset {
     border: none;
 }
 
+
 .wrapper-fieldset {
     display: flex;
     flex-direction: column;
+}
+
+#personal-info .wrapper-fieldset {
     gap: 16px;
 }
 
-.col-2{
+.col-2 {
     display: flex;
-    
+
     gap: 22px;
 }
-.col-2 > div{
+
+.col-2>div {
     width: 100%;
 }
 
@@ -140,11 +150,59 @@ fieldset {
     margin-left: 9px;
 }
 
-.wrapper-field input {
+.wrapper-field span:hover {
+    color: #797681;
+    font-size: 13px;
+}
+
+.wrapper-field input,
+.wrapper-field select,
+.wrapper-field textarea {
+    color: #F67669;
+
     border: 1px solid #E6E6F0;
     border-radius: 8px;
 
     background: #FAFAFC;
 
     height: 55px;
+
+    font-size: 20px;
+    line-height: 30x;
+
+    padding: 0 24px;
+    
+}
+.wrapper-field textarea{
+    height: 167px;
+    padding: 10px 24px;
+
+    resize: none;
+}
+
+
+.wrapper-field select {
+    appearance: none;
+    -webkit-appearance: none;
+}
+
+.wrapper-fieldset legend {
+    color: #253B51;
+    ;
+
+    text-align: center;
+
+    border-bottom: 1px solid #E6E6F0;
+
+    padding-bottom: 8px;
+
+    font-size: 24px;
+    line-height: 34px;
+
+
+
+}
+
+#mentor-info .wrapper-fieldset {
+    gap: 32px;
 }
