--- a/style.css
+++ b/style.css
@@ -171,9 +171,10 @@ fieldset {
     line-height: 30x;
 
     padding: 0 24px;
-    
+
 }
-.wrapper-field textarea{
+
+.wrapper-field textarea {
     height: 167px;
     padding: 10px 24px;
 
@@ -198,11 +199,54 @@ fieldset {
 
     font-size: 24px;
     line-height: 34px;
-
-
-
+    
+    
+    
 }
 
 #mentor-info .wrapper-fieldset {
     gap: 32px;
+}
+#mentor-info .wrapper-checkbox input {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 24px;
+    height: 24px;
+    border-radius: 8px;
+
+    opacity: 0;
+}
+
+#mentor-info .wrapper-checkbox {
+    position: relative;
+}
+
+#mentor-info .wrapper-checkbox label {
+
+    display: flex;
+    gap: 10px;
+
+}
+
+#mentor-info .wrapper-checkbox label::before {
+
+    content: '';
+    background: #FAFAFC;
+    width: 24px;
+    height: 24px;
+
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+
+    display: block;
+
+}
+
+#mentor-info .wrapper-checkbox input:checked + label::before{
+    background: #F67669;
+}
+#mentor-info .wrapper-checkbox input:focus + label::before {
+    outline: 1px solid black;
 }
