--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 h1,
 legend,
-button {
+.button {
     font-family: 'Staatliches', sans-serif;
 }
 
@@ -91,9 +91,9 @@ header .wrapper-header {
 form {
     width: 750px;
 
-    margin: auto;
+    margin: 0 auto 392px;
 
-    padding: 30px 64px;
+    padding: 30px 64px 0;
 
     background: white;
 
@@ -101,7 +101,9 @@ form {
 
     display: flex;
     flex-direction: column;
+
     gap: 32px;
+
 
 }
 
@@ -257,4 +259,20 @@ fieldset {
 }
 #next-mentor .wrapper-fieldset > .col-2 > .col-2{
     gap: 10px;
+}
+
+form .button{
+    color: white;
+    font-size: 20px;
+    line-height: 26px;
+    /* font-weight: 400; */
+    
+    background: #F67669;
+
+    border: none;
+    border-radius: 8px;
+
+    padding: 15px 40px;
+
+    margin: 34px 0 64px;
 }
